--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ display: flex;
 flex-direction: row;
 align-items: center;
 } 
-
+ 
 .logo img{
 width: 19px;
 height: 16px;
@@ -55,7 +55,7 @@ list-style: none;
 nav a{
     color: black;
     text-decoration: none;
-}
+} 
 
 #hero {
     display: flex;
@@ -71,7 +71,7 @@ nav a{
 #hero h1{
     font-size: 36px;
     text-align: center;
-    margin: 55px 0 0 0;
+    margin: 4.44vh 0 0 0;
 }
  
 #hero h2{
@@ -93,6 +93,30 @@ margin-top: -3vh;
     width: 81vw;  
     text-align: center;
     align-self: center; 
-    margin: 5vh 0 0 0;
+    margin: 0vh 0 0 0;
 }
 
+.call-to-action{
+    display: flex;
+    justify-content: center;
+
+    width: 100%;
+    height: 30px;
+}
+
+.call-to-action button{
+    width: 33vw; 
+    height: 4.66vh;
+    margin: 5.33vw;
+    margin-top: 3.33vh;
+
+ 
+    border: none;
+    border-radius: 6px;  
+
+    font-weight: 800;
+    color: white;
+    font-size: 13px;  
+
+    background: linear-gradient(#E8770E, #F1694A);
+}
