--- a/styles.css
+++ b/styles.css
@@ -114,13 +114,13 @@ margin-top: -3vh;
 
     width: 100%;
     height: 30px;
+    margin-bottom: 2vh;
 }
 
 .call-to-action button{
     width: 33vw; 
     height: 4.66vh;
     margin: 5.33vw;
-    margin-top: 3.33vh;
 
  
     border: none;
@@ -135,7 +135,29 @@ margin-top: -3vh;
 
 
 
-
 .info-section{
     height: 200vh;
+}
+
+
+.info-card{
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+text-align: center;
+}
+
+
+.info-card h3{
+color: #F1694B;
+font-size: 24px;
+margin: 80px 0 0 0;
+}
+
+.info-card p{
+    font-weight: 700;
+    letter-spacing: 2px;
+    font-size: 12px;
+    width: 92vw;
 }
