--- a/styles.css
+++ b/styles.css
@@ -1,175 +1,181 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap");
 
- 
-body{
-    width: 100vw;
-    margin: 0;
-    aspect-ratio: 0;
-    font-family: 'Inter', sans-serif;
-    background-color: #FFFEED;
-} 
-
-header{
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
+body {
+  width: 100vw;
+  margin: 0;
+  aspect-ratio: 0;
+  font-family: "Inter", sans-serif;
+  background-color: #fffeed;
 }
 
-.logo{
-display: flex;
-flex-direction: row;
-align-items: center;
-} 
- 
-.logo img{
-width: 19px;
-height: 16px;
-} 
-
-.logo p{
-font-size: 11px;
-font-weight: 600;
+header {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
 }
 
-
-.nav-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-    width: 100vw;
-    background-color: #FFFEED;
-    position: fixed; 
-}
- 
-
-nav{
-    display: flex;
-    flex-direction: row; 
-    align-items: center;
-    justify-content: space-between;
- 
-    width: 90%;
-    padding: 0;
-    margin: 0 0 0 0; 
-}
- 
-nav .nav-btn{
-    width: 21px;
-    height: 14px;
+.logo {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
-nav ul{  
-display: none;
-list-style: none;
-} 
+.logo img {
+  width: 19px;
+  height: 16px;
+}
 
-nav a{
-    color: black;
-    text-decoration: none;
-} 
+.logo p {
+  font-size: 11px;
+  font-weight: 600;
+}
+
+.nav-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 100vw;
+  background-color: #fffeed;
+  position: fixed;
+}
+
+nav {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+
+  width: 90%;
+  padding: 0;
+  margin: 0 0 0 0;
+}
+
+nav .nav-btn {
+  width: 21px;
+  height: 14px;
+}
+
+nav ul {
+  display: none;
+  list-style: none;
+}
+
+nav a {
+  color: black;
+  text-decoration: none;
+}
 
 #hero {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 
-    background-repeat: no-repeat;
-    background-size: 100%; 
-    background-position: 0% 100%;
-    background-image: url('./Images/BG-ART-1.png');
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: 0% 100%;
+  background-image: url("./Images/BG-ART-1.png");
 }
 
-#hero h1{
-    font-size: 36px;
-    text-align: center;
-    margin: 4.44vh 0 0 0;
-}
- 
-#hero h2{
-    font-size: 16px;
-    text-align: center;
-    margin: 15px 0 0 0;
-    color: #F16A49;
-}
- 
-#hero img{
-width: 100%;
-margin-top: -3vh;
+#hero h1 {
+  font-size: 36px;
+  text-align: center;
+  margin: 4.44vh 0 0 0;
 }
 
-#hero p{
-    font-weight: 600;
-    font-size: 16px;
-    letter-spacing: 4px;
-    width: 81vw;  
-    text-align: center;
-    align-self: center; 
-    margin: 0vh 0 0 0;
+#hero h2 {
+  font-size: 16px;
+  text-align: center;
+  margin: 15px 0 0 0;
+  color: #f16a49;
 }
 
-.call-to-action{
-    display: flex;
-    justify-content: center;
-
-    width: 100%;
-    height: 30px;
-    margin-bottom: 2vh;
+#hero img {
+  width: 100%;
+  margin-top: -3vh;
 }
 
-.call-to-action button{
-    width: 33vw; 
-    height: 4.66vh;
-    margin: 5.33vw;
-
- 
-    border: none;
-    border-radius: 6px;  
-
-    font-weight: 800;
-    color: white;
-    font-size: 13px;  
-
-    background: linear-gradient(#E8770E, #F1694A);
+#hero p {
+  font-weight: 600;
+  font-size: 16px;
+  letter-spacing: 4px;
+  width: 81vw;
+  text-align: center;
+  align-self: center;
+  margin: 0vh 0 0 0;
 }
 
+.call-to-action {
+  display: flex;
+  justify-content: center;
 
-
-
-.info-card{
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-text-align: center;
+  width: 100%;
+  height: 30px;
+  margin-bottom: 2vh;
 }
 
+.call-to-action button {
+  width: 33vw;
+  height: 4.66vh;
+  margin: 5.33vw;
 
-.info-card h3{
-color: #F1694B;
-font-size: 24px;
-margin: 80px 0 0 0;
+  border: none;
+  border-radius: 6px;
+
+  font-weight: 800;
+  color: white;
+  font-size: 13px;
+
+  background: linear-gradient(#e8770e, #f1694a);
 }
 
-.info-card p{
-    font-weight: 700;
-    letter-spacing: 2px;
-    font-size: 12px;
-    width: 92vw;
+.info-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
-
-
-.projects-section{
-    position: relative;
+.info-card h3 {
+  color: #f1694b;
+  font-size: 24px;
+  margin: 80px 0 0 0;
 }
 
+.info-card p {
+  font-weight: 700;
+  letter-spacing: 2px;
+  font-size: 12px;
+  width: 92vw;
+}
 
+.projects-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-.projects-section h4{ 
-   position: absolute;
-   top: 1vh;
-   left: 23vw;
-    color: white;
-    font-size: 40px;
+  position: relative;
+}
+
+.projects-section h4 {
+  position: absolute;
+  top: 1vh;
+  left: 23vw;
+  color: white;
+  font-size: 40px;
+}
+
+.project-card {
+  margin: 3vh;
+}
+
+.project-card h5 {
+  font-size: 16px;
+  margin: 2%;
+}
+
+.project-card img {
+  border-radius: 5%;
+  max-width: 90vw;
 }
