--- a/styles.css
+++ b/styles.css
@@ -117,7 +117,7 @@ nav a {
   margin-bottom: 2vh;
 }
 
-.call-to-action button {
+button {
   width: 33vw;
   height: 4.66vh;
   margin: 5.33vw;
@@ -214,3 +214,37 @@ nav a {
   display: flex;
   flex-direction: column;
 }
+
+.contact-form button{
+    margin: 0;
+}
+
+.email-input{
+    width: 80vw;
+    height: 3vh;
+    margin-top: 2vh;
+    margin-bottom: 2vh;
+}
+
+
+.message-input{
+    height: 15vh;
+    margin-top: 2vh;
+    margin-bottom: 2vh;
+}
+
+
+.send-row{
+display: flex;
+flex-direction: row;
+justify-content: space-between;
+align-items: center;
+width: 100%;
+
+}
+
+.send-row p {
+    font-weight: 700;
+    font-size: 12px;
+}
+
